<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_basic"
    tools:context="com.example.khalessi.sensorentest.MainActivity">

    <TextView
        android:id="@+id/notiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/beschleunigungssensor"
        style="@style/textViewStyle"
       />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background_text"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSensorXVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_value_changed"
            style="@style/textViewStyle" />

        <TextView
            android:id="@+id/tvSensorYVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_value_changed"
            style="@style/textViewStyle" />

        <TextView
            android:id="@+id/tvSensorZVal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/z_value_changed"
            style="@style/textViewStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/notizZwei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="14dp"
        style="@style/textViewStyle"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:background="@color/background_text"
        android:text="@string/wenn_du_mich_sch_ttelst_werde_ich_rot" />

    <TextView
        android:id="@+id/angle"
        android:text="@string/kompass"
        android:layout_margin="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        style="@style/textViewStyle"
        android:layout_marginTop="32dp"/>
    <ImageView
        android:id="@+id/imageViewCompass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"

        android:src="@drawable/kompass" />

</LinearLayout>

